--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.2.0",
     "jest-expo": "~19.0.0",
     "prettier": "^1.3.1",
     "prettier-eslint": "^6.2.0",
@@ -27,14 +27,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^4.0.0",
-    "color": "^1.0.3",
+    "@expo/vector-icons": "^5.1.0",
+    "color": "^2.0.0",
     "expo": "^19.0.0",
+    "hoist-non-react-statics": "^1.2.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1",
-    "react-native-extended-stylesheet": "^0.4.0",
-    "react-native-vector-icons": "^4.3.0"
+    "react-native-dropdownalert": "^2.8.0",
+    "react-native-extended-stylesheet": "^0.6.0",
+    "react-native-vector-icons": "^4.3.0",
+    "react-navigation": "^1.0.0-beta.11"
   }
 }
