--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "react-native-dropdownalert": "^2.8.0",
     "react-native-extended-stylesheet": "^0.6.0",
     "react-native-vector-icons": "^4.3.0",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-navigation": "^1.0.0-beta.11",
+    "react-redux": "^5.0.6",
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.1"
   }
 }
