--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.2.1",
+    "eslint-plugin-react": "^7.1.0",
     "jest-expo": "~19.0.0",
     "prettier": "^1.3.1",
     "prettier-eslint": "^6.2.0",
@@ -41,6 +41,7 @@
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.6.0",
-    "redux-logger": "^3.0.1"
+    "redux-logger": "^3.0.1",
+    "redux-saga": "^0.15.3"
   }
 }
